--- a/01_intro_python/python_basics.ipynb
+++ b/01_intro_python/python_basics.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ca349513",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comments are not executed\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a single-line comment\n",
     "\n",
@@ -19,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "184518ee",
    "metadata": {},
    "outputs": [
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "51d614dd",
    "metadata": {},
    "outputs": [
@@ -65,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f2a2d481",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8\n",
+      "1\n",
+      "59049\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# Arithmetic\n",
     "a = 9\n",
