--- a/11_classes/classes.ipynb
+++ b/11_classes/classes.ipynb
@@ -84,16 +84,34 @@
    "execution_count": null,
    "id": "5bf690a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method Car.drive of <__main__.Car object at 0x108029d30>>\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice (Car class)\n",
     "class Car:\n",
     "    def __init__(self, model):\n",
     "        self.model = model\n",
-    "    def drive(self)\n",
-    "        return\n",
-    "\n"
+    "    def drive(self):\n",
+    "        return f\"{self.model} is driving!\"\n",
+    "\n",
+    "car = Car(\"Prius\")\n",
+    "print(f\"{car.drive}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72cf61ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
