--- a/11_classes/classes.ipynb
+++ b/11_classes/classes.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5bf690a5",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method Car.drive of <__main__.Car object at 0x108029d30>>\n"
+      "Prius is driving!\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
     "        return f\"{self.model} is driving!\"\n",
     "\n",
     "car = Car(\"Prius\")\n",
-    "print(f\"{car.drive}\")"
+    "print(car.drive())"
    ]
   },
   {
