--- a/16_files/files.ipynb
+++ b/16_files/files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "474c22f7",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,8 @@
       "files.ipynb\n",
       "3.txt\n",
       "2.txt\n",
-      "1.txt\n"
+      "1.txt\n",
+      "file_names.txt\n"
      ]
     }
    ],
